# ese519-lab2B

./: README.md
10_protoboard/: Readme.md
1_registers/: readme.md
1_registers/flashlight/: flashlight.c
2_repl/: readme.md
2_repl/pio/ws2812/: ws2812.c
2_repl/repl/: CMakeLists.txt  repl.c
3_sequencer/: readme.md
3_sequencer/sequencer/: CMakeLists.txt  adafruit_qtoy_rp2040.h  neopixel.c  sequencer.c
4_slow_motion/: readme.md
4_slow_motion/slowmotion/: CMakeLists.txt  slowmotion.c  ws2812.pio
5_i2c_traffic/: firely.py  readme.md
6_pioscope/: CMakeLists.txt  Readme.md  pioscope.c
7_pio_sequencer/: Readme.md
7_pio_sequencer/pio-sequencer/: CMakeLists.txt  neopixel.h  pio-sequencer.c
8_adps_protocol/: Readme.md
8_adps_protocol/adpsprotocol/: CMakeLists.txt  adps.c  adps.h  adpsprotocol.c  pio_i2c.c
9_lab_on_a_chip/: Readme.md
9_lab_on_a_chip/lab-on-a-chip/: CMakeLists.txt  apds.c  apds.h  i2c.pio  lab_on_a_chip.c  neopixel.c  neopixel.h  piosequencer.c
